tests/ui/adapter-tuple-conflict.fail.stderr
error: `tuple` cannot be added with `adapter`
 --> tests/ui/adapter-tuple-conflict.fail.rs:5:57
  |
5 |     #[builder(adapter(|x: u32, y: u32| (x + 1, y + 1)), tuple)]
  |                                                         ^^^^^
